--- a/LinearRegression/LinearRegression.ipynb
+++ b/LinearRegression/LinearRegression.ipynb
@@ -379,7 +379,7 @@
     "total = pyXT*pyX\n",
     "totalInv = total.inv()\n",
     "total2 = totalInv * pyXT\n",
-    "solution = total2\n",
+    "solution = total2 * pyY\n",
     "vec = total2.colvec(0)\n",
     "vec = vec.trans()\n",
     "\n",
