--- a/LinearPolyRegression/LinearRegression.ipynb
+++ b/LinearPolyRegression/LinearRegression.ipynb
@@ -606,7 +606,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -625,7 +625,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c0268c06082bbe3cc38d55639c546f63482eb23e2c38516956ccd1f3a27bf008"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
